A bunch of updates that I'm happy about

--- a/ellevest.html
+++ b/ellevest.html
@@ -66,7 +66,7 @@
 				<div class="portfolio_text_box align_left">
 					<p class="italic_courier top_of_container_text">What I Did</p>
 					<p>
-						My work at Ellevest began in the Fall of 2015 as a contractor where my first task was a simple build of their Beta release “Sign Up” page. As my work for Ellevest continued, I constructed HTML E-mails (which were not so fun, but taught me a lot), in addition to integrating various article views for Ellevest’s “Resource Center” in Ruby on Rails. Once my work for Ellevest as an Engineering Apprentice for the Summer of 2016 started, I spent a large chunk of my time refining and adding to Ellevest's in-office tools. Doing so allowed me to gain a more solidified understanding of Ruby, Rails, and MYSQL, while also giving me more Back End experience I hadn't had much of before.
+						My work at Ellevest began in the Fall of 2015 as a contractor where my first task was a simple build of their Beta release “Sign Up” page. As my work for Ellevest continued, I constructed HTML E-mails (which were not so fun, but taught me a lot), in addition to integrating content into Ellevest’s “Resource Center” with Ruby on Rails. Once my work for Ellevest as an Engineering Apprentice for the Summer of 2016 started, I spent a large chunk of my time refining and adding to Ellevest's in-office tools, allowing me to gain a more solidified understanding of Ruby, Rails, and MYSQL, while also giving me more Back End experience I hadn't had much of before.
 					</p>
 				</div>
 
@@ -82,18 +82,49 @@
 		</div>
 
 		<div class="fifty_spacer"></div>
-		<img class="larger_project_image" src="imgs/Ellevest8.jpg" alt="ellevest" />
+
+		<div class="white_block">
+			<div class="horizontal_rule"></div>
+			<div class="fifty_spacer"></div>
+			<div class="wide_text_box">
+				<h4 class="mid_page_header">In-Office Tools</h4>
+				<p>
+					During the first month of my summer at Ellevest, I spent a lot of time streamlining processes around building HTML emails and deploying the weekly "Resource Center" articles so that my time could be used for more intensive Full Stack work on Ellevest's in-office tools. A huge part of this work was visually cleaning up the Front-End of these in-office tools by making them responsive and more appealing to use. The different pages used to have text and data pieces that would spread out of view, and visual elements that would overlap, making the job of people who needed to use these tools difficult. The work also entailed using Rails to add new features that were needed as the product grew, like a client note-taking feature, and a Content Management System.
+				</p>
+			</div>
+			<img class="desktop_img" src="imgs/Elv-responsive--desktop.png" alt="Ellevest In Office Work Infographic">
+			<img class="mobile_img" src="imgs/Elv-responsive--mobile.png" alt="Ellevest In Office Work Infographic">
+
+			<div class="fifty_spacer"></div>
+			<div class="horizontal_rule"></div>
+		</div>
+
+		<div class="wide_text_box">
+			<h4 class="mid_page_header">Press Page</h4>
+			<p>
+				Another project I had was building out a simple and easy to use page to hold all of Ellevest's press articles. I built the Press Page in a similar manner to that of the Resource Center, so it could easily integrate into the CMS as it became more developed. That way, Ellevest employees could add to it easily as Ellevest was featured in the press more. 
+			</p>
+		</div>
+
 		<div class="fifty_spacer"></div>
-		<img class="larger_project_image" src="imgs/Ellevest1.png" alt="ellevest" />
+		<a href="https://www.ellevest.com/press" target="_blank" title="Ellevest.com">
+			<img class="larger_project_image" src="imgs/ellevest-screenshots.png" alt="ellevest" />	
+		</a>
 		<div class="fifty_spacer"></div>
-		<img class="larger_project_image" src="imgs/Ellevest2.jpg" alt="ellevest" />
-		<div class="fifty_spacer"></div>
-		<img class="larger_project_image" src="imgs/Ellevest3.png" alt="ellevest" />
+
+
+		<div class="wide_text_box">
+			<p>
+				Overall, my experience at Ellevest was a great one. The employees who work there are some of the most intelligent individuals I've had the opportunity to be around. Working at Ellevest allowed me to expand my knowledge of web engineering in learning from those awesome people, and also enabled me to take part in efforts towards achieving gender equality, a mission that I'm passionate about.
+			</p>
+		</div>
+
 		<div class="fifty_spacer"></div>
 		<div class="fifty_spacer"></div>
 
 		<div class="next_project_container">
 			<a href="wresq.html" class="next_project_link"><strong>Next Project</strong>: Law Firm Website</a>
+			<div class="fifty_spacer"></div>
 		</div>
 	</div>
 
