--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 			<h1 id="lander_greeting1_new">HEY!</h1>
 			<h3 id="lander_greeting2_new">I'm Connor, a Web Engineer and Graphic Designer based in New York. I love taking part in work where I can blend meaningful design with well-written code to build great things. Check out both my portfolio and my <a class="underline_link" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better understanding of my presence in design and engineering. If you'd like to contact me, click <a class="underline_link" href="mailto:connor.rowland34@gmail.com">here</a>.</h3>
 		</div>
+		<div class="lander_img">
+			<img src="imgs/city-website-02.png" alt="New York City">
+		</div>
 	</div>
 	<div id="portfolio_container_new">
 		<a href="ellevest.html" title="">
