Updating wresq page and blog

--- a/blog.html
+++ b/blog.html
@@ -30,16 +30,19 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
-	<div class="fifty_spacer"></div>
+	<div class="hundred_spacer"></div>
+	<h1 id="project_name_text">Blog</h1>
 		<div class="posts_container">
 			<div class="feature_post">
-				<a class="feature_blog_post_title" title="How 1 Link Drastically Changed My Site" href="posts/how-1-link.html">How 1 Link Drastically Changed My Site</a>	
+				<div class="feature_title_container">
+					<a class="feature_blog_post_title" title="How 1 Link Drastically Changed My Site" href="posts/how-1-link.html">How 1 Link Drastically Changed My Site</a>	
+				</div>
 			</div>
+			<div class="horizontal_rule"></div>
 			<div class="non_feature_post">
 				<a class="non_feature_blog_post_title" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>
 			</div>
 			<div class="post_filler">
-				
 			</div>
 		</div>
 	</div>
@@ -48,20 +51,20 @@
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
 			<p>Or other things.</p>
-			<button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
+			<button id="email_me_button"><a href="mailto:connor.rowland34@gmail.com">Email Me!</a></button>
 		</div>
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
 				<a href="index.html">Home</a>
-				<a id="portfolio_link">Portfolio</a>
+				<a href="http://connorrowland.github.io/index.html#portfolio_container_new" id="portfolio_link">Portfolio</a>
 				<a href="imgs/resume.pdf">Resume</a>
 			</nav>
 			<div id="footer_links">
-				<a href="mailto:cjr6734@yahoo.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
+				<a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
 				<a target="_blank" href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
 				<a target="_blank" href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
 			</div>
-			<p id="footer_text">Connor Rowland<br>New York, NY<br>Cjr6734@yahoo.com<br>(845)548-2033</p>
+			<p id="footer_text">Connor Rowland<br>New York, NY<br>connor.rowland34@gmail.com</p>
 		</div>
 	</footer>
 </body>
