--- a/iphone.html
+++ b/iphone.html
@@ -62,7 +62,7 @@
 		</div>
 		<div class="fifty_spacer"></div>
 		<div class="next_project_container">
-			<a href="magazines.html" class="next_project_link"><strong>Next Project</strong>: Magazine Spreads</a>
+			<a href="trilogy.html" class="next_project_link"><strong>Next Project</strong>: Git/Github Graphics</a>
 		</div>
 	</div>
 
