--- a/pride.html
+++ b/pride.html
@@ -42,7 +42,7 @@
 		<div class="fifty_spacer"></div>
 
 		<div class="next_project_container">
-			<a href="wresq.html" class="next_project_link"><strong>Next Project</strong>: Law Firm Website</a>
+			<a href="ellevest.html" class="next_project_link"><strong>Next Project</strong>: Ellevest</a>
 		</div>
 	</div>
 
