--- a/wresq.html
+++ b/wresq.html
@@ -69,16 +69,33 @@
 		</div>
 		<div class="fifty_spacer"></div>
 		<a href="http://wresq.com/about.html" title="William Ricigliano, P.C. Website" target="_blank"><img class="larger_project_image" src="imgs/wresq-mock.png" alt="William Ricigliano, P.C. Website"/></a>
+		<div class="fifty_spacer"></div>
+		<div class="white_block">
+			<div class="horizontal_rule"></div>
+			<div class="fifty_spacer"></div>
+			<div class="wide_text_box left_aligned">
+				<h4 class="mid_page_header">The Issue</h4>
+				<p>
+					There were many problems with the old website that the new one was to solve. The first one being that the design of the site didn't reflect the brand that the firm wanted to be known for. It was a bit outdated, and also wasn't responsive. So in order for the site to be used for things like marketing, it needed to have a fresh start. 
+				</p>
+			</div>
+			<div class="fifty_spacer"></div>
 
-		<div class="side_by_side wresq_old_screenshots">
-			<div class="item">
-				<h2>Old Site</h2>
-				<img src="imgs/wresq-old-site.png" alt="Old William Ricigliano Website" title="Old William Ricigliano Website" class="wresq_bef_aft">
+			<h3 class="italic_courier">Old Site:</h3>
+
+			<img src="imgs/wresq-old-site.png" alt="Old William Ricigliano Website" title="Old William Ricigliano Website" class="larger_project_image">
+
+			<div class="fifty_spacer"></div>
+
+			<div class="wide_text_box left_aligned">
+				<h4 class="mid_page_header">What I Changed</h4>
+				<p>
+					The first thing I wanted to be sure to do was establish the desired brand with a logo and color scheme. This guided me to designing and updating the website. I then decided it was important to not only design for all devices, but also build for many different browsers. William Ricigliano, P.C. has a variety of different clients who may not have the most updated or current versions of their browser or operating system, so ensuring the site would "degrade gracefully" was an important task for me. 
+				</p>
 			</div>
-			<div class="item">
-				<h2>New Site</h2>
-				<a href="http://wresq.com/" title="William Ricigliano, P.C. Website" target="_blank"><img src="imgs/wresq-new-site.png" alt="New William Ricigliano Website" title="New William Ricigliano Website" class="wresq_bef_aft"></a>
-			</div>
+
+			<div class="fifty_spacer"></div>
+			<div class="horizontal_rule"></div>
 		</div>
 		<div class="hundred_spacer"></div>
 		
@@ -104,6 +121,7 @@
 		<div class="next_project_container">
 			<a href="iphone.html" class="next_project_link"><strong>Next Project</strong>: iPhone Reproduction</a>
 		</div>
+		<div class="fifty_spacer"></div>
 	</div>
 	<footer>
 		<div id="footer_contact_box">
