Updating ellevest page

--- a/blog.html
+++ b/blog.html
@@ -35,12 +35,12 @@
 		<div class="posts_container">
 			<div class="feature_post">
 				<div class="feature_title_container">
-					<a class="feature_blog_post_title" title="How 1 Link Drastically Changed My Site" href="posts/how-1-link.html">How 1 Link Drastically Changed My Site</a>	
+					<a class="feature_blog_post_title" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>	
 				</div>
 			</div>
 			<div class="horizontal_rule"></div>
 			<div class="non_feature_post">
-				<a class="non_feature_blog_post_title" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>
+				<a class="non_feature_blog_post_title" title="How 1 Link Drastically Changed My Site" href="posts/how-1-link.html">How 1 Link Drastically Changed My Site</a>
 			</div>
 			<div class="post_filler">
 			</div>
