--- a/ellevest.html
+++ b/ellevest.html
@@ -100,6 +100,7 @@
 		</div>
 
 		<div class="wide_text_box">
+			<div class="fifty_spacer"></div>
 			<h4 class="mid_page_header">Press Page</h4>
 			<p>
 				Another project I had was building out a simple and easy to use page to hold all of Ellevest's press articles. I built the Press Page in a similar manner to that of the Resource Center, so it could easily integrate into the CMS as it became more developed. That way, Ellevest employees could add to it easily as Ellevest was featured in the press more. 
