Updates to ellevest page

--- a/ellevest.html
+++ b/ellevest.html
@@ -111,17 +111,18 @@
 		<a href="https://www.ellevest.com/press" target="_blank" title="Ellevest.com">
 			<img class="larger_project_image" src="imgs/ellevest-screenshots.png" alt="ellevest" />	
 		</a>
-		<div class="fifty_spacer"></div>
+		<div class="hundred_spacer"></div>
 
 
 		<div class="wide_text_box">
+			<div class="horizontal_rule"></div>
 			<p>
 				Overall, my experience at Ellevest was a great one. The employees who work there are some of the most intelligent individuals I've had the opportunity to be around. Working at Ellevest allowed me to expand my knowledge of web engineering in learning from those awesome people, and also enabled me to take part in efforts towards achieving gender equality, a mission that I'm passionate about.
 			</p>
+			<div class="horizontal_rule"></div>
 		</div>
 
-		<div class="fifty_spacer"></div>
-		<div class="fifty_spacer"></div>
+		<div class="hundred_spacer"></div>
 
 		<div class="next_project_container">
 			<a href="wresq.html" class="next_project_link"><strong>Next Project</strong>: Law Firm Website</a>
