adding reach out footer

--- a/index.html
+++ b/index.html
@@ -110,8 +110,16 @@
 		<div id="footer_contact_box">
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I made this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
-			<p>Or other things.</p>
+			<p>Or another greeting of your choice.</p>
 			<button id="email_me_button"><a href="mailto:connor.rowland34@gmail.com">Email Me!</a></button>
+		</div>
+		<div id="reach_out_footer">
+			<div class="fifty_spacer"></div>
+			<div id="reach_out_text">
+				<h2>Have a project you'd like to work with me on?</h2>
+				<p>I'd love to hear about it. Feel free to reach out <a href="mailto:connor.rowland34@gmail.com">here</a>.</p>
+			</div>
+			<div class="fifty_spacer"></div>
 		</div>
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
