Updating description meta tags

--- a/iphone.html
+++ b/iphone.html
@@ -5,7 +5,7 @@
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="iPhone reproduction built with HTML, CSS, Javascript and JQuery by me, Connor, in New York City.">
+	<meta name="description" content="iPhone reproduction built with HTML, CSS, Javascript and JQuery.">
 	<meta name="author" content="Connor Rowland">
 	<meta name="keywords" content="web developer, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, new york web engineer, web developer new york, web engineer, Connor John Rowland, baruch college">
 	<!-- Scripts and Links -->
