--- a/trilogy.html
+++ b/trilogy.html
@@ -5,7 +5,7 @@
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Graphic Design work done by Connor for a coding bootcamp based in New Jersey at Trilogy Educational Services.">
+	<meta name="description" content="Graphic Design work done by me, Connor Rowland, for a web development bootcamp based in New Jersey.">
 	<meta name="author" content="Connor Rowland">
 	<meta name="keywords" content="web developer, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, new york web engineer, web developer new york, web engineer, Connor John Rowland, baruch college">
 	<!-- Scripts and Links -->
