--- a/wresq.html
+++ b/wresq.html
@@ -5,7 +5,7 @@
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="A Web Engineering and Graphic Design portfolio website for me, Connor, based in New York City.">
+	<meta name="description" content="A freelance web development project done by me, Connor Rowland, in New York City. Click through my website to view more of my work.">
 	<meta name="author" content="Connor Rowland">
 	<meta name="keywords" content="web developer, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, new york web engineer, web developer new york, web engineer, Connor John Rowland, baruch college">
 	<!-- Scripts and Links -->
