Updates in spacing and copy

--- a/wresq.html
+++ b/wresq.html
@@ -72,20 +72,20 @@
 		<div class="fifty_spacer"></div>
 		<div class="white_block">
 			<div class="horizontal_rule"></div>
-			<div class="fifty_spacer"></div>
+			<div class="hundred_spacer"></div>
 			<div class="wide_text_box left_aligned">
 				<h4 class="mid_page_header">The Issue</h4>
 				<p>
-					There were many problems with the old website that the new one was to solve. The first one being that the design of the site didn't reflect the brand that the firm wanted to be known for. It was a bit outdated, and also wasn't responsive. So in order for the site to be used for things like marketing, it needed to have a fresh start. 
+					There were many problems with the old website that the new one needed to solve. The first one being that the design of the site didn't reflect the brand that the firm wanted to be recognized for. It was a bit outdated, and didn't have many responsive design and/or user experience considerations. So in order for the site to be used as a marketing tool and adequate representation of the firm, it needed to have a fresh start. 
 				</p>
 			</div>
-			<div class="fifty_spacer"></div>
+			<div class="hundred_spacer"></div>
 
-			<h3 class="italic_courier">Old Site:</h3>
+			<h3>Old Site:</h3>
 
 			<img src="imgs/wresq-old-site.png" alt="Old William Ricigliano Website" title="Old William Ricigliano Website" class="larger_project_image">
 
-			<div class="fifty_spacer"></div>
+			<div class="hundred_spacer"></div>
 
 			<div class="wide_text_box left_aligned">
 				<h4 class="mid_page_header">What I Changed</h4>
@@ -94,7 +94,7 @@
 				</p>
 			</div>
 
-			<div class="fifty_spacer"></div>
+			<div class="hundred_spacer"></div>
 			<div class="horizontal_rule"></div>
 		</div>
 		<div class="hundred_spacer"></div>
