adding regex to ellevest page

--- a/ellevest.html
+++ b/ellevest.html
@@ -122,6 +122,21 @@
 			<div class="horizontal_rule"></div>
 		</div>
 
+
+		<div class="hundred_spacer"></div>
+
+
+		<div class="white_block">
+			<div class="horizontal_rule"></div>
+			<div class="fifty_spacer"></div>
+			<div class="wide_text_box">
+			<script src="https://gist.github.com/connorrowland/b053b3b5cdc4f17f2f3fb62e1187dcba.js"></script>
+			</div>
+			<div class="fifty_spacer"></div>
+			<div class="horizontal_rule"></div>
+		</div>
+
+
 		<div class="hundred_spacer"></div>
 
 		<div class="next_project_container">
