--- a/ellevest.html
+++ b/ellevest.html
@@ -85,29 +85,34 @@
 
 		<div class="white_block">
 			<div class="horizontal_rule"></div>
-			<div class="fifty_spacer"></div>
-			<div class="wide_text_box">
+			<div class="hundred_spacer"></div>
+			<div class="text_w_wrap wide_text_box">
 				<h4 class="mid_page_header">In-Office Tools</h4>
 				<p>
-					During the first month of my summer at Ellevest, I spent a lot of time streamlining processes around building HTML emails and deploying the weekly "Resource Center" articles so that my time could be used for more intensive Full Stack work on Ellevest's in-office tools. A huge part of this work was visually cleaning up the Front-End of these in-office tools by making them responsive and more appealing to use. The different pages used to have text and data pieces that would spread out of view, and visual elements that would overlap, making the job of people who needed to use these tools difficult. The work also entailed using Rails to add new features that were needed as the product grew, like a client note-taking feature, and a Content Management System.
+					My time at Ellevest working on their in-office tools was a great chance for me to try out the different ends of the Web Development spectrum. On one end, I was cleaning up different pages so they were more functional and user friendly. On the other, I had the opportunity to build out a Content Management System, which was not only so fun, but incredibly beneficial to my understanding of databases, regular expressions, and Rails. But all of this work didn't come easily. I had to work my way the need for engineering involement in the work I was previously doing&mdash;a lot of HTML emails :-/&mdash;by streamlining processes around building them. After that I was able to really work on refining and growing in my skills as Full Stack Engineer.
+				</p>
+				<p>
+					A huge part of this work dealt with visually cleaning up the Front-End of these in-office tools by making them responsive and more appealing to use. Additionally, some of the features needed to be refactored RESTfully. People in the office wanted to be able to simply modify a URL to retrieve a resource, and those URLs needed more consistency throughout the application to enable people to do that.
+				</p>
+				<p>
+					The Front End issues the applicaion had mostly dealt with text and data pieces spreading out of view, which meant that potentially important things just couldn't be seen on a page, which was bad. So I used Semantic.ui and custom CSS to clean up some of these tools, making them more functional and easy to use.  
 				</p>
 			</div>
-			<img class="desktop_img" src="imgs/Elv-responsive--desktop.png" alt="Ellevest In Office Work Infographic">
-			<img class="mobile_img" src="imgs/Elv-responsive--mobile.png" alt="Ellevest In Office Work Infographic">
+			<img class="mobile_img" id="elv_in_office_img" src="imgs/Elv-responsive--mobile.png" alt="Ellevest In Office Work Infographic">
 
-			<div class="fifty_spacer"></div>
+			<div class="hundred_spacer"></div>
 			<div class="horizontal_rule"></div>
 		</div>
 
 		<div class="wide_text_box">
-			<div class="fifty_spacer"></div>
+			<div class="hundred_spacer"></div>
 			<h4 class="mid_page_header">Press Page</h4>
 			<p>
 				Another project I had was building out a simple and easy to use page to hold all of Ellevest's press articles. I built the Press Page in a similar manner to that of the Resource Center, so it could easily integrate into the CMS as it became more developed. That way, Ellevest employees could add to it easily as Ellevest was featured in the press more. 
 			</p>
 		</div>
 
-		<div class="fifty_spacer"></div>
+		<div class="hundred_spacer"></div>
 		<a href="https://www.ellevest.com/press" target="_blank" title="Ellevest.com">
 			<img class="larger_project_image" src="imgs/ellevest-screenshots.png" alt="ellevest" />	
 		</a>
