Addition of blog and 2 blog posts

--- a/ellevest.html
+++ b/ellevest.html
@@ -28,7 +28,8 @@
 <body>
 	<nav id="nav_bar">
 		<a href="index.html">Home</a>
-		<a href="http://connorrowland.github.io/index.html#portfolio_container_new">Portfolio</a>
+		<a href="index.html#portfolio_link">Portfolio</a>
+		<a href="blog.html">Blog</a>
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
@@ -161,8 +162,10 @@
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
 				<a href="index.html">Home</a>
-				<a href="http://connorrowland.github.io/index.html#portfolio_container_new" id="portfolio_link">Portfolio</a>
+				<a href="index.html#portfolio_link">Portfolio</a>
+				<a href="blog.html">Blog</a>
 				<a href="imgs/resume.pdf">Resume</a>
+				<a href="mailto:connor.rowland34@gmail.com">Contact</a>
 			</nav>
 			<div id="footer_links">
 				<a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
