--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,7 @@
 		  ga('send', 'pageview');
 
 	</script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="app.js"></script>
 	<link rel="shortcut icon" href="./otherPhotos/favicon1.ico"/>
 	<link rel="stylesheet" type="text/css" href="website.css">
@@ -27,23 +28,32 @@
 <body class="blog_body">
 	<div class="blog_container">
 	<nav id="nav_bar">
-		<a id="portfolio_link">Portfolio</a>
+		<a href="index.html">Home</a>
+		<a href="index.html#portfolio_link">Portfolio</a>
+		<a href="blog.html">Blog</a>
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
 	<div class="hundred_spacer"></div>
 	<h1 id="project_name_text">Blog</h1>
 		<div class="posts_container">
-			<div class="feature_post">
+
+			<div class="feature_post" id="floppy-bg">
 				<div class="feature_title_container">
-					<a class="feature_blog_post_title" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>	
+					<a class="feature_blog_post_title" title="My Approach to User Flow" href="posts/how-1-link.html">My Approach to User Flow</a>
 				</div>
 			</div>
+
+			<div class="twenty_spacer"></div>
 			<div class="horizontal_rule"></div>
-			<div class="non_feature_post">
-				<a class="non_feature_blog_post_title" title="How 1 Link Drastically Changed My Site" href="posts/how-1-link.html">How 1 Link Drastically Changed My Site</a>
+			<div class="twenty_spacer"></div>
+
+			<div class="non_feature_post proj3">
+				<div class="title_container center vertical_center">
+					<a class="non_feature_blog_post_title" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>
+				</div>
 			</div>
-			<div class="post_filler">
+			<div class="non_feature_post proj1">
 			</div>
 		</div>
 	</div>
@@ -57,8 +67,10 @@
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
 				<a href="index.html">Home</a>
-				<a href="http://connorrowland.github.io/index.html#portfolio_container_new" id="portfolio_link">Portfolio</a>
+				<a href="index.html#portfolio_link">Portfolio</a>
+				<a href="blog.html">Blog</a>
 				<a href="imgs/resume.pdf">Resume</a>
+				<a href="mailto:connor.rowland34@gmail.com">Contact</a>
 			</nav>
 			<div id="footer_links">
 				<a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
