--- a/flat-design.html
+++ b/flat-design.html
@@ -51,6 +51,7 @@
 				<a href="index.html">Home</a>
 				<a href="http://connorrowland.github.io/index.html#portfolio_container_new" id="portfolio_link">Portfolio</a>
 				<a href="imgs/resume.pdf">Resume</a>
+				<a href="mailto:connor.rowland34@gmail.com">Contact</a>
 			</nav>
 			<div id="footer_links">
 				<a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
