--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 </head>
 <body>
 	<nav id="nav_bar">
-		<a id="portfolio_link">Portfolio</a>
+		<a href="index.html">Home</a>
+		<a href="index.html#portfolio_link">Portfolio</a>
+		<a href="blog.html">Blog</a>
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
@@ -124,8 +126,10 @@
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
 				<a href="index.html">Home</a>
-				<a id="portfolio_link">Portfolio</a>
+				<a href="index.html#portfolio_link">Portfolio</a>
+				<a href="blog.html">Blog</a>
 				<a href="imgs/resume.pdf">Resume</a>
+				<a href="mailto:connor.rowland34@gmail.com">Contact</a>
 			</nav>
 			<div id="footer_links">
 				<a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
