Fixing link to portfolio page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 	<nav id="nav_bar">
 		<a href="index.html">Home</a>
-		<a href="index.html#portfolio_link">Portfolio</a>
+		<a href="index.html#portfolio_container_new">Portfolio</a>
 		<a href="blog.html">Blog</a>
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
@@ -126,7 +126,7 @@
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
 				<a href="index.html">Home</a>
-				<a href="index.html#portfolio_link">Portfolio</a>
+				<a href="index.html#portfolio_container_new">Portfolio</a>
 				<a href="blog.html">Blog</a>
 				<a href="imgs/resume.pdf">Resume</a>
 				<a href="mailto:connor.rowland34@gmail.com">Contact</a>
