--- a/baruch.html
+++ b/baruch.html
@@ -20,7 +20,7 @@
 	</script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="app.js"></script>
-	<link rel="shortcut icon" href="./otherPhotos/favicon1.ico"/>
+	<link rel="shortcut icon" href="imgs/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="website.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700|Libre+Baskerville:400italic' rel='stylesheet' type='text/css'>
 </head>
