--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 	</script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="app.js"></script>
-	<link rel="shortcut icon" href="./otherPhotos/favicon1.ico"/>
+	<link rel="shortcut icon" href="imgs/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="website.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700|Libre+Baskerville:400italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<nav id="nav_bar">
 		<a href="index.html">Home</a>
-		<a href="index.html#portfolio_container_new">Portfolio</a>
+		<a href="#portfolio_container_new">Portfolio</a>
 		<a href="blog.html">Blog</a>
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
