Updating copy and design of blog

--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
 
 			<div class="feature_post" id="floppy-bg">
 				<div class="feature_title_container">
-					<a class="feature_blog_post_title" title="My Approach to User Flow" href="posts/how-1-link.html">My Approach to User Flow</a>
+					<a class="feature_blog_post_title" title="My Approach to User Flow" href="posts/how-1-link.html">How A Focus On User Flow And 30 Minutes of Coding Decreased Drop-Off On My Website By 30%</a>
 				</div>
 			</div>
 
