--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Web Engineer and Graphic Designer based in New York City.">
 	<meta name="author" content="Connor Rowland">
-	<meta name="keywords" content="web developer, freelance web developer, freelance web developer for hire, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, nyc web engineer, web developer ny, web engineer, Connor John Rowland, baruch college">s
+	<meta name="keywords" content="web developer, freelance web developer, freelance web developer for hire, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, nyc web engineer, web developer ny, web engineer, Connor John Rowland, baruch college">
 	<!-- Scripts and Links -->
 	<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -23,7 +23,6 @@
 	<script src="app.js"></script>
 	<link rel="shortcut icon" href="imgs/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="website.css">
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,700|Libre+Baskerville:400italic' rel='stylesheet' type='text/css'>
 </head>
 <body class="blog_body">
 	<div class="blog_container">
@@ -37,7 +36,6 @@
 	<div class="hundred_spacer"></div>
 	<h1 id="project_name_text">Blog</h1>
 		<div class="posts_container">
-
 			<div class="feature_post" id="floppy-bg">
 				<div class="feature_title_container">
 					<a class="feature_blog_post_title" title="My Approach to User Flow" href="posts/how-1-link.html">How A Focus On User Flow And 30 Minutes of Coding Decreased Drop-Off On My Website By 30%</a>
