--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Connor Rowland | Web Developer and Graphic Designer in New York, NY</title>
+	<title>Connor Rowland | Web Engineer</title>
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Web Engineer and Graphic Designer based in New York City.">
+	<meta name="description" content="Web Engineer based in New York City.">
 	<meta name="author" content="Connor Rowland">
+	<meta property='og:image' content="http://connorrowland.github.io/imgs/cr-og-img.png"/>
 	<meta name="keywords" content="web developer, freelance web developer, freelance web developer for hire, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, nyc web engineer, web developer ny, web engineer, Connor John Rowland, baruch college">
 	<!-- Scripts and Links -->
 	<script>
