--- a/blog.html
+++ b/blog.html
@@ -36,9 +36,9 @@
 	<div class="hundred_spacer"></div>
 	<h1 id="project_name_text">Blog</h1>
 		<div class="posts_container">
-			<div class="feature_post" id="floppy-bg">
+			<div class="feature_post" id="mistakes_bg">
 				<div class="feature_title_container">
-					<a class="feature_blog_post_title" title="My Approach to User Flow" href="posts/how-1-link.html">How A Focus On User Flow And 30 Minutes of Coding Decreased Drop-Off On My Website By 30%</a>
+					<a class="feature_blog_post_title" title="How To Successfully Make Mistakes" href="posts/best-way-to-make-mistakes.html">How To Successfully Make Mistakes</a>
 				</div>
 			</div>
 
@@ -48,13 +48,17 @@
 
 			<div class="non_feature_post proj3">
 				<div class="title_container center vertical_center">
-					<a class="non_feature_blog_post_title" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>
+					<a class="non_feature_blog_post_title white-font" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>
 				</div>
 			</div>
-			<div class="non_feature_post proj1">
+			<div class="non_feature_post" id="floppy-bg">
+				<div class="title_container center vertical_center left_aligned">
+					<a class="non_feature_blog_post_title black-font" title="My Approach to User Flow" href="posts/how-1-link.html">How A Focus On User Flow And 30 Minutes of Coding Decreased Drop-Off On My Website By 30%</a>
+				</div>
 			</div>
 		</div>
 	</div>
+	<div class="fifty_spacer"></div>
 	<footer>
 		<div id="footer_contact_box">
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
