--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
 		</div>
 	</div>
 	<div id="portfolio_container_new">
+		<a href="instamilligram.html" title="InstaMilligram">
+			<div class="portfolio_preview_updates proj9">
+				<div class="portfolio_preview_bio">
+					<h2>InstaMilligram</h2>
+					<p>An Instagram replication built with Ruby on Rails&mdash;an independent project.</p>
+				</div>
+			</div>
+		</a>
 		<a href="ellevest.html" title="">
 			<div class="portfolio_preview_updates proj3">
 				<div class="portfolio_preview_bio">
