--- a/instamilligram.html
+++ b/instamilligram.html
@@ -57,7 +57,7 @@
 				<div class="portfolio_text_box align_left">
 					<p class="italic_courier top_of_container_text">Why I Made It</p>
 					<p>
-						Beyond aiming to replicate Instagram, my intentions with InstaMilligram were to sharpen my Rails and AJAX/JQuery skills, and build an application with RESTful considerations in mind that so I could use it as a solid foundation for other projects. I ended up gaining a lot from building InstaMilligram as unexpected challenges came up, and was able to see that in my work at <a class="underline_link" href="ellevest.html">Ellevest</a>, where I spent a good deal of time adding to and refactoring pieces of Rails products. 
+						Beyond aiming to replicate Instagram, my intentions with InstaMilligram were to sharpen my Rails and AJAX/JQuery skills, and build an application with RESTful considerations in mind that so I could use it as a solid foundation for other projects. I encountered a few bumps along the way in building InstaMilligram as unexpected situations came about. But these challenges ended up teaching me so much more than I expected, and also prepared me for my work at <a class="underline_link" href="ellevest.html">Ellevest</a>, where I spent a good deal of time adding to and refactoring pieces of Rails products. 
 					</p>
 				</div>
 			</div>
