--- a/instamilligram.html
+++ b/instamilligram.html
@@ -57,7 +57,7 @@
 				<div class="portfolio_text_box align_left">
 					<p class="italic_courier top_of_container_text">Why I Made It</p>
 					<p>
-						Beyond aiming to replicate Instagram, my intentions with InstaMilligram were to sharpen my Rails and AJAX/JQuery skills, and build an application with RESTful considerations in mind that so I could use it as a solid foundation for other projects. I encountered a few bumps along the way in building InstaMilligram as unexpected situations came about. But these challenges ended up teaching me so much more than I expected, and also prepared me for my work at <a class="underline_link" href="ellevest.html">Ellevest</a>, where I spent a good deal of time adding to and refactoring pieces of Rails products. 
+						Beyond aiming to replicate Instagram, my intentions with InstaMilligram were to sharpen my Rails and AJAX/JQuery skills, and build an application with RESTful considerations in mind that so I could use it as a solid foundation for other projects. I encountered a few bumps along the way in building InstaMilligram as unexpected situations came about. But these challenges ended up teaching me so much more than I expected, and also preparing me for my work at <a class="underline_link" href="ellevest.html">Ellevest</a>, where I spent a good deal of time adding to and refactoring pieces of Rails products. 
 					</p>
 				</div>
 			</div>
@@ -71,7 +71,7 @@
 				<div class="left_aligned wide_text_box">
 					<h4 class="mid_page_header">A Frame For Future Projects</h4>
 					<p>
-						I hope to use this project and its various functionality pieces&mdash;like loggin in and commenting&mdash;as a frame for many new projects to come. I see InstaMilligram as a blank canvas (functionally) that I can add on new ideas and projects concepts to. I find having this type of product to be an asset as an engineer because by having a functionality frame, I've already gotten over a huge hurdle in the implementation of future products. 
+						I hope to use this project and its functionality &mdash;like login in and dynamically rendering comments&mdash;as a frame for many new projects to come. I see InstaMilligram as a blank canvas that I can add new ideas and projects concepts to. I find having this type of product to be an asset as an engineer, as having a sound functionality frame can take a huge hurdle out of the implementation of future technical projects.
 					</p>
 				</div>
 			<div class="hundred_spacer"></div>
@@ -81,15 +81,15 @@
 		<div class="wide_text_box left_aligned">
 			<h4 class="mid_page_header">Difficulties Along the Way</h4>
 			<p>
-				This project also shed light on many of the challenges associated with building a product from the ground up. But it was in these challenges that I truly got to know not only the product, but the technologies that support it (and do not...). Deployments in particular were one hurdle for me to overcome. Looking back to my <a href="ellevest.html">time at Ellevest</a>, I definitely took their well developed deployment process for granted. So when it was time for me to do this on my own with InstaMilligram, I ran into a few bumps along the way (that entailed so many "hope this works" commit messages), but eventually gained a great understanding of the Rails Asset Pipeline. 
+				This project also shed light on many of the challenges associated with developing something from the ground up. But it was in these challenges that I truly got to know not only the product, but the technologies that support it (and do not...). Deployments in particular were one hurdle for me to overcome. Looking back at my <a href="ellevest.html" class="underline_link">time at Ellevest</a>, I definitely took their well developed deployment process for granted. So when it was time for me to do this on my own with InstaMilligram, I ran into a few bumps along the way (that entailed so many "hope this works" commit messages), but eventually gained a great understanding of the Rails Asset Pipeline. 
 			</p>
 
 			<p>
-				Another challenge I faced with InstaMilligram came from using Heroku for a photo sharing website without realizing that Heroku's database storage is ephemeral (*shakes head*). So I ended up learning how to connect a Rails application hosted on Heroku with AWS S3 and the world became good again!
+				Another challenge I faced with InstaMilligram came from using Heroku for a photo sharing website without realizing that Heroku's database storage is ephemeral (*shakes head*). So I ended up learning how to connect a Rails application hosted on Heroku with AWS S3, and the world became good again!
 			</p>
 
 			<p>
-				These challenges&mdash;along with many others that I've encountered as I begin to grow into my place as a web engineer&mdash;and the way I've learned to deal with them are outlined in a blog post I've written <a href="posts/best-way-to-make-mistakes.html" class="underline_link">here</a>
+				These challenges&mdash;along with many others that I've encountered as I grow into my place as a Web Engineer&mdash;and the way I've learned to deal with them are outlined in a blog post I've written <a href="posts/best-way-to-make-mistakes.html" class="underline_link">here</a>
 			</p>
 		</div>
 
