--- a/blog.html
+++ b/blog.html
@@ -36,9 +36,9 @@
 	<div class="hundred_spacer"></div>
 	<h1 id="project_name_text">Blog</h1>
 		<div class="posts_container">
-			<div class="feature_post" id="mistakes_bg">
+			<div class="feature_post proj7">
 				<div class="feature_title_container">
-					<a class="feature_blog_post_title" title="How To Successfully Make Mistakes" href="posts/best-way-to-make-mistakes.html">How To Successfully Make Mistakes</a>
+					<a class="feature_blog_post_title" title="Why I Would Resist the Last Recently Used Approach to Sorting" href="posts/last-recently-used.html">Why I Would Resist the Last Recently Used Approach to Sorting</a>
 				</div>
 			</div>
 
@@ -46,16 +46,23 @@
 			<div class="horizontal_rule"></div>
 			<div class="twenty_spacer"></div>
 
-			<div class="non_feature_post proj3">
-				<div class="title_container center vertical_center">
-					<a class="non_feature_blog_post_title white-font" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>
+			<div class="old_posts_container">
+				<div class="non_feature_post proj3">
+					<div class="title_container center vertical_center">
+						<a class="non_feature_blog_post_title white-font" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>
+					</div>
 				</div>
-			</div>
-			<div class="non_feature_post" id="floppy-bg">
-				<div class="title_container center vertical_center left_aligned">
-					<a class="non_feature_blog_post_title black-font" title="My Approach to User Flow" href="posts/how-1-link.html">How A Focus On User Flow And 30 Minutes of Coding Decreased Drop-Off On My Website By 30%</a>
+				<div class="non_feature_post" id="floppy-bg">
+					<div class="title_container center vertical_center left_aligned">
+						<a class="non_feature_blog_post_title black-font" title="My Approach to User Flow" href="posts/how-1-link.html">How A Focus On User Flow And 30 Minutes of Coding Decreased Drop-Off On My Website By 30%</a>
+					</div>
 				</div>
-			</div>
+				<div class="non_feature_post fill_space" id="mistakes_bg">
+					<div class="title_container center vertical_center">
+						<a class="non_feature_blog_post_title white-font" title="How To Successfully Make Mistakes" href="posts/best-way-to-make-mistakes.html">How To Successfully Make Mistakes</a>
+					</div>
+				</div>
+			</div>-
 		</div>
 	</div>
 	<div class="fifty_spacer"></div>
