Updated some styles

--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
 						<a class="non_feature_blog_post_title black-font" title="My Approach to User Flow" href="posts/how-1-link.html">How A Focus On User Flow And 30 Minutes of Coding Decreased Drop-Off On My Website By 30%</a>
 					</div>
 				</div>
-				<div class="non_feature_post fill_space" id="mistakes_bg">
+				<div class="fill_space" id="mistakes_bg">
 					<div class="title_container center vertical_center">
 						<a class="non_feature_blog_post_title white-font" title="How To Successfully Make Mistakes" href="posts/best-way-to-make-mistakes.html">How To Successfully Make Mistakes</a>
 					</div>
