Updating w the old changes i had and stashed

--- a/ellevest.html
+++ b/ellevest.html
@@ -40,7 +40,7 @@
 				<div class="portfolio_text_box align_right">
 					<p class="italic_courier">When</p>
 					<p>
-						September 2015 &ndash; August 2016.
+						September 2015 &ndash; Present.
 					</p>
 				</div>
 				
@@ -66,7 +66,7 @@
 				<div class="portfolio_text_box align_left">
 					<p class="italic_courier top_of_container_text">What I Did</p>
 					<p>
-						My work at Ellevest began in the Fall of 2015 as a contractor where my first task was a simple build of their Beta release “Sign Up” page. As my work for Ellevest continued, I constructed HTML E-mails (which were not so fun, but taught me a lot), in addition to integrating content into Ellevest’s “Resource Center” with Ruby on Rails. Once my work for Ellevest as an Engineering Apprentice for the Summer of 2016 started, I spent a large chunk of my time refining and adding to Ellevest's in-office tools, allowing me to gain a more solidified understanding of Ruby, Rails, and MYSQL, while also giving me more Back End experience I hadn't had much of before.
+						My work at Ellevest began in the Fall of 2015 as a contractor where my first task was a simple build of their Beta release “Sign Up” page in Ruby on Rails and React.js. Since then, Ellevest has given me many opportunities to grow as an engineer, working on more significant projects dealing client facing pages, like the Galentine's Day page below. I also spent a large chunk of my time refining and adding to Ellevest's in-office tools, which provided me a more enriched understadning of Back End engineering as I worked with Ruby, Rails, and MYSQL, while also giving me more Back End experience I hadn't had much of before.
 					</p>
 				</div>
 
@@ -75,8 +75,7 @@
 					<h2>Ruby</h2>
 					<h2>Rails</h2>
 					<h2>React.Js</h2>
-					<h2>SASS</h2>
-					<h2>HTML (Emails)</h2>
+					<h2>MYSQL</h2>
 				</div>
 			</div>
 		</div>
@@ -89,7 +88,7 @@
 			<div class="text_w_wrap wide_text_box">
 				<h4 class="mid_page_header">In-Office Tools</h4>
 				<p>
-					My time at Ellevest working on their in-office tools was a great chance for me to try out the different ends of the Web Development spectrum. On one end, I was cleaning up different pages so they were more functional and user friendly. On the other, I had the opportunity to build out a Content Management System, which was not only so fun, but incredibly beneficial to my understanding of databases, regular expressions, and Rails. But all of this work didn't come easily. I had to work my way the need for engineering involement in the work I was previously doing&mdash;a lot of HTML emails :-/&mdash;by streamlining processes around building them. After that I was able to really work on refining and growing in my skills as Full Stack Engineer.
+					My time at Ellevest working on their in-office tools was a great chance for me to get familiar with different ends of the Web Development spectrum. On one end, I was cleaning up different pages so they were more functional and user friendly. On the other, I had the opportunity to build out a Content Management System, which was not only so fun, but incredibly beneficial to my understanding of databases, regular expressions, and Rails. But all of this work didn't come easily. I had to work my way the need for engineering involement in the work I was previously doing&mdash;a lot of HTML emails :-/&mdash;by streamlining processes around building them. After that I was able to really work on refining and growing in my skills as Full Stack Engineer.
 				</p>
 				<p>
 					A huge part of this work dealt with visually cleaning up the Front-End of these in-office tools by making them responsive and more appealing to use. Additionally, some of the features needed to be refactored RESTfully. People in the office wanted to be able to simply modify a URL to retrieve a resource, and those URLs needed more consistency throughout the application to enable people to do that.
@@ -106,16 +105,37 @@
 
 		<div class="wide_text_box">
 			<div class="hundred_spacer"></div>
-			<h4 class="mid_page_header">Press Page</h4>
+			<h4 class="mid_page_header">Client Facing Pages</h4>
 			<p>
-				Another project I had was building out a simple and easy to use page to hold all of Ellevest's press articles. I built the Press Page in a similar manner to that of the Resource Center, so it could easily integrate into the CMS as it became more developed. That way, Ellevest employees could add to it easily as Ellevest was featured in the press more. 
+				
 			</p>
 		</div>
+		<div class="hundred_spacer"></div>
+		<div class="row">
+			<div>
+				<h4>Galentine's Day</h4>
+				<p>
+					Another project I had was building out a simple and easy to use page to hold all of Ellevest's press features. I built the Press Page in a similar manner to that of the Resource Center, so it could easily integrate into the CMS as it became more developed. That way, Ellevest employees could add to it easily as Ellevest gained more popularity in the press.
+				</p>
+			</div>
+			<a href="https://www.ellevest.com/press" target="_blank" title="Ellevest.com">
+				<img class="larger_project_image" src="imgs/ellevest-screenshots.png" alt="ellevest" />	
+			</a>
+		</div>
+		<div class="hundred_spacer"></div>
 
 		<div class="hundred_spacer"></div>
-		<a href="https://www.ellevest.com/press" target="_blank" title="Ellevest.com">
-			<img class="larger_project_image" src="imgs/ellevest-screenshots.png" alt="ellevest" />	
-		</a>
+		<div class="row">
+			<div>
+				<h4>Press Page</h4>
+				<p>
+					Another project I had was building out a simple and easy to use page to hold all of Ellevest's press features. I built the Press Page in a similar manner to that of the Resource Center, so it could easily integrate into the CMS as it became more developed. That way, Ellevest employees could add to it easily as Ellevest gained more popularity in the press.
+				</p>
+			</div>
+			<a href="https://www.ellevest.com/press" target="_blank" title="Ellevest.com">
+				<img class="larger_project_image" src="imgs/ellevest-screenshots.png" alt="ellevest" />	
+			</a>
+		</div>
 		<div class="hundred_spacer"></div>
 
 
