adding fun colors to homepage links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div class="lander_container_new">
 		<div class="vertical_center">
 			<h1 id="lander_greeting1_new">HEY!</h1>
-			<h3 id="lander_greeting2_new">I'm Connor, a Web Engineer based in New York. I love taking part in work where I can blend meaningful design with well-written code to build great things. Check out both my portfolio and my <a class="underline_link" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better understanding of my presence in design and engineering. If you'd like to contact me, click <a class="underline_link" href="mailto:connor.rowland34@gmail.com">here</a>.</h3>
+			<h3 id="lander_greeting2_new">I'm Connor, a Web Engineer based in New York. I love taking part in work where I can blend meaningful design with well-written code to build great things. Check out both my portfolio and my <a class="orange_text" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better understanding of my presence in design and engineering. If you'd like to contact me, click <a class="magenta_text" href="mailto:connor.rowland34@gmail.com">here</a>.</h3>
 		</div>
 		<div class="lander_img">
 			<img src="imgs/city-website-02.png" alt="New York City">
