--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			<div class="fifty_spacer"></div>
 			<div id="reach_out_text">
 				<h2>Have a project you'd like to work with me on?</h2>
-				<p>I'd love to hear about it. Feel free to reach out <a href="mailto:connor.rowland34@gmail.com">here</a>.</p>
+				<p>I'd love to hear about it. Feel free to reach out <a href="mailto:connor.rowland34@gmail.com" class="orange_text">here</a>.</p>
 			</div>
 			<div class="fifty_spacer"></div>
 		</div>
